Adding quota functionality
