# clientgen_utils/requiredApis.py
@@ -21,4 +21,5 @@ RequiredAPIs = [
     "/object/namespaces/namespace/{namespace}",
     "/object/namespaces/namespace/{namespace}/deactivate",
     "/object/namespaces/namespace/{namespace}/retention*",
+    "/object/namespaces/namespace/{namespace}/quota",
 ]
